# tpt-data-parsers

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  hygiene.yml  publish.yml
docs/: spec.txt
tpt-cron-parse/: Cargo.toml  README.md
tpt-cron-parse/examples/: crontab.rs  next_run.rs
tpt-cron-parse/src/: lib.rs
tpt-cron-parse/tests/: cron.rs
tpt-geo-geojson/: Cargo.toml  README.md
tpt-geo-geojson/examples/: serialize.rs  validate.rs
tpt-geo-geojson/src/: lib.rs
tpt-geo-geojson/tests/: geojson.rs
tpt-geo-geojson/tests/fixtures/: malformed_coords.geojson  unclosed_polygon.geojson  valid.geojson
tpt-jsonl-stream/: CHANGELOG.md  Cargo.toml  README.md
tpt-jsonl-stream/examples/: stream.rs  write.rs
tpt-jsonl-stream/src/: lib.rs
tpt-jsonl-stream/tests/: streams.rs
tpt-jsonl-stream/tests/fixtures/: sample.jsonl
tpt-logfmt-parse/: Cargo.toml  README.md
tpt-logfmt-parse/examples/: logfmt.rs
tpt-logfmt-parse/src/: lib.rs
tpt-logfmt-parse/tests/: parse.rs
tpt-mime-pure/: Cargo.toml  README.md
tpt-mime-pure/examples/: detect.rs
tpt-mime-pure/src/: lib.rs
tpt-mime-pure/tests/: mime.rs
