[workspace]
members = [
    "tpt-jsonl-stream",
    "tpt-geo-geojson",
    "tpt-logfmt-parse",
    "tpt-cron-parse",
    "tpt-mime-pure",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
authors = ["TPT Solutions"]
repository = "https://github.com/tpt-solutions/tpt-data-parsers"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
